# forjar-cookbook

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: book.yml  ci.yml  qualify-runner.yml
.pmat-metrics/: lint-status.json
configs/: container-01-devbox.yaml  container-02-webserver.yaml  container-03-postgresql.yaml  container-04-monitoring.yaml  container-05-redis.yaml  container-06-ci-runner.yaml  container-09-baseline.yaml
crates/cookbook-examples/: Cargo.toml
crates/cookbook-examples/examples/: apply_container.rs  build_crosscompile.rs  cis_compliance.rs  compliance_audit.rs  config_compare.rs  container_build.rs  convergence_testing.rs  cron_management.rs  destroy_rollback.rs  drift_detection.rs  environment_promotion.rs  event_rulebook.rs  full_stack_deploy.rs  github_release.rs  idempotency_check.rs  import_brownfield.rs  infrastructure_query.rs  metric_snapshot.rs  multi_machine.rs  plan_all.rs  plugin_lifecycle.rs  policy_engine.rs  progressive_rollout.rs  qualify_recipe.rs  score_all.rs  secret_management.rs  service_health.rs  state_encryption.rs  state_query.rs  supply_chain.rs  task_caching.rs  template_resolution.rs  user_management.rs  validate_all.rs  watch_daemon.rs
crates/cookbook-examples/src/: lib.rs
crates/cookbook-examples/tests/: integration_tests.rs
crates/cookbook-qualify/: Cargo.toml
crates/cookbook-qualify/src/: lib.rs  main.rs  qualify.rs  score.rs  sync.rs  table.rs
crates/cookbook-qualify/src/qualify/: tests.rs
crates/cookbook-qualify/src/score/: config.rs  dimensions.rs  mod.rs  tests.rs
crates/cookbook-qualify/src/score/tests/: tests_dimensions.rs  tests_dimensions_ext.rs  tests_saf_obs.rs
crates/cookbook-qualify/src/sync/: tests.rs
crates/cookbook-qualify/src/table/: tests.rs
crates/cookbook-runner/: Cargo.toml
crates/cookbook-runner/src/: commands.rs  lib.rs  main.rs  report.rs  runner.rs
crates/cookbook-runner/src/commands/: tests.rs
crates/cookbook-runner/src/report/: tests.rs
crates/cookbook-runner/src/runner/: tests.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  (+6 more)
docs/certifications/: recipes.csv
docs/roadmaps/: roadmap.yaml
recipes/: 01-developer-workstation.yaml  02-web-server.yaml  03-postgresql.yaml  04-monitoring-stack.yaml  05-redis-cache.yaml  06-ci-runner.yaml  07-rocm-gpu.yaml  08-nvidia-gpu.yaml  09-secure-baseline.yaml  10-nfs-server.yaml  11-dev-shell.yaml  12-toolchain-pin.yaml  13-build-sandbox.yaml  14-system-profile.yaml  15-workspace.yaml  16-rust-release.yaml  17-static-musl.yaml  18-multi-stage-build.yaml  19-cross-compile.yaml  20-sovereign-stack.yaml  21-apr-model.yaml  22-secrets-lifecycle.yaml  23-tls-certificates.yaml  24-fleet-provisioning.yaml  25-apt-repo.yaml  26-deb-package.yaml  27-private-apt-repo.yaml  28-rpm-build.yaml  29-distribution-pipeline.yaml  30-saved-plan.yaml  31-json-plan.yaml  32-check-blocks.yaml  33-lifecycle.yaml  34-moved-blocks.yaml  35-refresh-only.yaml  36-resource-targeting.yaml  37-testing-dsl.yaml  38-state-encryption.yaml  39-cross-config.yaml  40-scheduled-tasks.yaml  (+58 more)
recipes/includes/: notify-hooks.yaml  policy-defaults.yaml
scripts/: check-docs-consistency.sh  coverage-check.sh  qualify-all.sh
(+37 files in other folders)
