[workspace]
resolver = "2"
members = [
    "crates/cookbook-qualify",
    "crates/cookbook-runner",
    "crates/cookbook-examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PAIML Engineering <engineering@paiml.com>"]
license = "MIT"
repository = "https://github.com/paiml/forjar-cookbook"
rust-version = "1.85"
exclude = [
    "docs/", "book/", "scripts/", "recipes/", "configs/",
    ".pmat/", ".pmat-work/", "target/", "*.profraw", "*.profdata",
    ".vscode/", ".idea/",
]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# CSV parsing
csv = "1.3"

# YAML parsing
serde_yaml_ng = "0.10"

# Forjar scoring engine (v2 — eliminates duplicate scoring code)
forjar = { path = "../forjar", default-features = false }

# Regex
regex = "1.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Workspace crates
cookbook-qualify = { version = "0.1.0", path = "crates/cookbook-qualify" }
cookbook-runner = { version = "0.1.0", path = "crates/cookbook-runner" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
