[package]
name = "cookbook-qualify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Forjar cookbook qualification — CSV parsing, table generation, README sync"

[[bin]]
name = "cookbook-readme-sync"
path = "src/main.rs"

[dependencies]
csv.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]

[lints]
workspace = true
